--- a/postit/src/components/pages/Messages/style.css
+++ b/postit/src/components/pages/Messages/style.css
@@ -1,18 +1,25 @@
-.left-panel {
-  box-shadow: 0px 10px 5px #5e5e5e, 0px 3px 5px #5e5e5e inset;
-}
-
-.right-panel {
-  box-shadow: 0px 10px 5px #5e5e5e, 0px 3px 5px #5e5e5e inset;
-}
 .main-container {
   height: calc(100% - 56px);
   max-width: 100% !important;
+  box-shadow: 0px 10px 5px #5e5e5e, 0px 3px 5px #5e5e5e inset;
 }
 
 .center-div {
   display: flex;
   justify-content: center;
+}
+
+.title-row {
+  padding: 15px;
+}
+
+.message-panel {
+  border: 1px solid black;
+  min-width: 200px !important;
+}
+
+.content-panel {
+  border: 1px solid black;
 }
 
 .title-row {
