--- a/postit/src/components/messageDisplayContainer/style.css
+++ b/postit/src/components/messageDisplayContainer/style.css
@@ -1,3 +1,29 @@
 .title-row {
   padding: 15px;
 }
+
+.message-box {
+  border: 1px solid black;
+  height: 71vh;
+  max-width: 55vw !important;
+  flex: 1;
+  margin-top: 1vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin: 0px 20px 0px 20px !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+.center-div {
+  display: flex;
+}
+
+.input-box {
+  max-width: 55vw !important;
+  /* height: 4.5vh; */
+  flex: 1;
+  margin: 0px 20px 0px 20px !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
