--- a/postit/src/components/messageListContainer/style.css
+++ b/postit/src/components/messageListContainer/style.css
@@ -1,6 +1,6 @@
 .message-container {
   border: 1px solid black;
-  height: 510px;
+  height: 75vh;
   max-width: 500px !important;
   flex: 1;
   margin-top: 1vh;
