--- a/postit/src/components/postsContainer/style.css
+++ b/postit/src/components/postsContainer/style.css
@@ -1,7 +1,8 @@
 .posts-container {
   text-align: left;
   border: 1px solid black;
-  height: 250px;
+  min-height: 250px;
+  height: 35vh;
   max-width: 100% !important;
   flex: 1;
   /* margin-top: 1vh; */
