--- a/postit/src/App.css
+++ b/postit/src/App.css
@@ -8,6 +8,13 @@ body {
   height: 100%;
 }
 
+.link {
+  color: black;
+  text-decoration: none; /* no underline */
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
