added a cork image to the image folder, fixed styling/word issue on the subscribers div on the profile page.  Changed how subscriber card renders (so it'll only render subscribers on profile page)

--- a/postit/src/components/subscriberCard/style.css
+++ b/postit/src/components/subscriberCard/style.css
@@ -17,3 +17,25 @@
   border-bottom: grey !important;
   height: 125px;
 }
+
+.profile-card-row {
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-sub-card {
+  border-bottom: grey !important;
+  height: 125px;
+}
+
+.center-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left-div {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
