--- a/postit/src/components/subscribersContainer/style.css
+++ b/postit/src/components/subscribersContainer/style.css
@@ -1,7 +1,7 @@
 .subscriber-container {
   border: 1px solid black;
-  height: 510px;
-  max-width: 500px !important;
+  height: 100%;
+  width: 100%;
   flex: 1;
   margin-top: 1vh;
   overflow-y: auto;
