--- a/postit/src/components/subscribersContainer/style.css
+++ b/postit/src/components/subscribersContainer/style.css
@@ -1,9 +1,9 @@
-.subscriber-container {
+.subs-container {
   border: 1px solid black;
-  height: 100%;
-  width: 100%;
+  height: 100% !important;
+  width: 100% !important;
   flex: 1;
   margin-top: 1vh;
-  overflow-y: auto;
+  overflow-y: auto !important;
   overflow-x: hidden;
 }
