Reworked styling for posts container so div dimensions can be controlled from parent page

--- a/postit/src/components/pages/Profile/style.css
+++ b/postit/src/components/pages/Profile/style.css
@@ -48,3 +48,13 @@
   font-size: 1em;
   margin: 5px;
 }
+
+.profile-card-div {
+  height: 285px;
+  width: 100%;
+}
+/* 
+.profile-posts-div {
+  height: 285px;
+  width: 100%;
+} */
