--- a/postit/src/components/postsContainer/style.css
+++ b/postit/src/components/postsContainer/style.css
@@ -1,11 +1,9 @@
 .posts-container {
-  text-align: left;
   border: 1px solid black;
-  min-height: 250px;
-  height: 35vh;
-  max-width: 100% !important;
+  height: 100% !important;
+  width: 100% !important;
   flex: 1;
-  /* margin-top: 1vh; */
+  margin-top: 1vh;
   overflow-y: auto !important;
   overflow-x: hidden;
 }
