Changed styling accross page mainly with button sizing/text size, form position, div sizes and position, needless borders and other inconsistencies

--- a/postit/src/components/messageList/style.css
+++ b/postit/src/components/messageList/style.css
@@ -2,10 +2,9 @@
   border-radius: 50%;
 }
 
-.remove-button {
-  width: 135px;
+.name-button {
   height: auto;
-  font-size: 1.5rem !important;
+  width: 150px;
 }
 
 .card-row {
