--- a/postit/src/components/pages/Messages/style.css
+++ b/postit/src/components/pages/Messages/style.css
@@ -9,8 +9,8 @@
   justify-content: center;
 }
 
-.title-row {
-  padding: 15px;
+.messaage-title {
+  margin: 10px 0px 10px 0px;
 }
 
 .message-panel {
