--- a/postit/src/components/messageDisplayContainer/style.css
+++ b/postit/src/components/messageDisplayContainer/style.css
@@ -7,10 +7,10 @@
   height: 71vh;
   max-width: 55vw !important;
   flex: 1;
-  margin-top: 1vh;
+  /* margin-top: 1vh; */
   overflow-y: auto;
   overflow-x: hidden;
-  margin: 0px 20px 0px 20px !important;
+  /* margin: 0px 20px 0px 20px !important; */
   padding-left: 0px !important;
   padding-right: 0px !important;
 }
@@ -26,4 +26,8 @@
   margin: 0px 20px 0px 20px !important;
   padding-left: 0px !important;
   padding-right: 0px !important;
+}
+
+.message-title {
+  margin: 10px 0px 10px 0px;
 }
