--- a/postit/src/components/subscribersContainer/style.css
+++ b/postit/src/components/subscribersContainer/style.css
@@ -3,7 +3,7 @@
   height: 100% !important;
   width: 100% !important;
   flex: 1;
-  margin-top: 1vh;
+  /* margin-top: 1vh; */
   overflow-y: auto !important;
   overflow-x: hidden;
 }
